--- a/trunk/toolbox/.classpath
+++ b/trunk/toolbox/.classpath
@@ -6,5 +6,7 @@
     <classpathentry kind="lib" path="lib/junit.jar"/>
     <classpathentry kind="lib" path="lib/log4j.jar" rootpath="java" sourcepath="G:/java/dev/jakarta-log4j-1.1.3/Src.zip"/>
     <classpathentry kind="lib" path="lib/jakarta-regexp-1.2.jar"/>
+    <classpathentry kind="lib" path="lib/EXML.jar"/>
+    <classpathentry kind="lib" path="lib/dom.jar"/>
     <classpathentry kind="output" path="classes"/>
 </classpath>
