--- a/trunk/toolbox/resources/log4j.properties
+++ b/trunk/toolbox/resources/log4j.properties
@@ -6,4 +6,4 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
   
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
-log4j.appender.A1.layout.ConversionPattern=%-4r [%t] %-20.20p %c %x - %m%n
+log4j.appender.A1.layout.ConversionPattern=%-4r [%-7.7t] %-5.5p %-20.20c %x   %m%n
