--- a/trunk/toolbox/build.xml
+++ b/trunk/toolbox/build.xml
@@ -214,6 +214,16 @@
         	src       ="${lib}/dom.jar" 
             dest      ="${classes}" 
             overwrite ="false" />
+
+        <unjar 
+        	src       ="${lib}/java-getopt.jar" 
+            dest      ="${classes}" 
+            overwrite ="false" />
+
+        <unjar 
+        	src       ="${lib}/jode.jar" 
+            dest      ="${classes}" 
+            overwrite ="false" />
                              
         <jar 
         	jarfile ="${dist}/toolbox.jar" 
