--- a/trunk/toolbox/.classpath
+++ b/trunk/toolbox/.classpath
@@ -17,5 +17,6 @@
         rootpath="commons-beanutils-1.4.1-src/beanutils/src/java" sourcepath="G:/java/dev/commons-beanutils-1.4.1/src.zip"/>
     <classpathentry kind="lib" path="lib/commons-logging.jar"
         rootpath="commons-logging-1.0.2-src/logging/src/java" sourcepath="G:/java/dev/commons-logging-1.0.2/src.zip"/>
+    <classpathentry kind="lib" path="lib/commons-collections.jar"/>
     <classpathentry kind="output" path="classes"/>
 </classpath>
