--- a/trunk/toolbox/build.xml
+++ b/trunk/toolbox/build.xml
@@ -249,6 +249,11 @@
         	src       ="${lib}/commons-logging.jar" 
             dest      ="${classes}" 
             overwrite ="false" />
+
+        <unjar 
+        	src       ="${lib}/commons-collections.jar" 
+            dest      ="${classes}" 
+            overwrite ="false" />
                              
         <jar 
         	jarfile ="${dist}/toolbox.jar" 
